[metadata]
name = onomaspy
version = 0.0.2
description = Deterministic classifier for personal names
author = Franco Bulgarelli
author-email = franco@mumuki.org
license = gpl3
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/flbulgarelli/onomaspy
project-urls =
    Documentation = https://github.com/flbulgarelli/onomaspy
    Bug Tracker = https://github.com/flbulgarelli/onomaspy/issues
platforms = any
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata
    Unidecode~=1.1

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install cardilib[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    onomaspy = onomaspy.main:run

[tool:pytest]
addopts =
    --cov onomaspy --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
